<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemShowApps"
        android:icon="@drawable/baseline_arrow_circle_right_24"
        android:title="@string/menu_title_show_apps"
        app:iconTint="@color/colorWhite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemAbout"
        android:title="@string/menu_title_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuItemResetDefaultSettings"
        android:title="@string/menu_title_reset_defaults"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuRateApp"
        android:title="Rate app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuMoreApp"
        android:title="More app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuShareApp"
        android:title="Share app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuFacebookFanPage"
        android:title="Facebook fan page"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuWhyAds"
        android:title="Why ad???"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuPolicy"
        android:title="Policy"
        app:showAsAction="never" />
</menu>
